<?xml version="1.0" encoding="utf-8"?>
<Button
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/updateButton"
    android:text="Update Now"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:onClick="updatePiSettings">
</Button>